Fixed some bad overflows

--- a/css/style.scss
+++ b/css/style.scss
@@ -283,6 +283,7 @@ header {
                 display: flex;
                 flex-direction: column;
                 color: inherit;
+                max-width: 100%;
 
                 h1 {
                     
@@ -292,7 +293,7 @@ header {
                     padding: 20px 20px;
                     text-transform: uppercase;
                     font-weight: 700;
-                    width: max-content;
+                    max-width: 100%;
 
                     @include ms(mob) {
                         font-size: 2.5em;
